Bug fix: Mobile bottom nav overlay z-index corrections

--- a/src/app/navBar/footerNav/FooterNav.css
+++ b/src/app/navBar/footerNav/FooterNav.css
@@ -1,7 +1,7 @@
 /* Footer navigation */
 .footer-nav-container {
     background-color: white;
-    z-index: 1;
+    z-index: 1001;
     position: fixed;
     bottom: 0;
     width: 100%;
