--- a/src/features/explore/exploreFilter/FilterPage.css
+++ b/src/features/explore/exploreFilter/FilterPage.css
@@ -2,7 +2,7 @@
     position: fixed;
     width: 100%;
     height: 100%;
-    z-index: 2;
+    z-index: 1002;
     left: 0;
     top: 0;
     background-color: rgb(0, 0, 0, 0.5);
