--- a/src/features/explore/exploreMap/ExploreMap.css
+++ b/src/features/explore/exploreMap/ExploreMap.css
@@ -4,7 +4,6 @@
     max-width: 100vw;
     /* If header or footer navbar height changes, change this */
     height: calc(100vh - 75px - 60px);
-    z-index: 0;
 }
 
 @media (min-width: 576px) {
@@ -118,7 +117,7 @@
     border-radius: 10px;
     border: 1px solid lightgray;
     box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    z-index: 1;
+    z-index: 401;
     max-width: calc(75vw - 60px);
     color: var(--neutral-dark);
     font-size: 0.8rem;
@@ -138,5 +137,5 @@
     right: 0;
     margin-right: 10px;
     margin-top: 10px;
-    z-index: 1;
+    z-index: 401;
 }
